--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -45,8 +45,8 @@
 
   <target name="precompile">
     <delete dir="build"/>
-    <mkdir dir="build/ressources/keymaps"/>
-    <copy todir="build/ressources/keymaps">
+    <mkdir dir="build/resources/keymaps"/>
+    <copy todir="build/resources/keymaps">
       <fileset dir="keymaps"/>
     </copy>
     <mkdir dir="jars"/>
@@ -260,11 +260,11 @@
 
   <target name="applet.jar" description="sign jar applets" depends="applet" >
     <copy file="windowsPathsJNI/libWindowsPaths.dll"
-          todir="build/ressources/WindowsLibs/32" />
+          todir="build/resources/WindowsLibs/32" />
     <copy file="libXClientArea/32/libXClientArea.so"
-          todir="build/ressources/LinuxLibs/32" />
+          todir="build/resources/LinuxLibs/32" />
     <copy file="libXClientArea/64/libXClientArea.so" failonerror="false"
-          todir="build/ressources/LinuxLibs/64" />
+          todir="build/resources/LinuxLibs/64" />
     <jar destfile="jars/ulteo-applet-${compile.release}.jar" basedir="build">
       <include name="**" />
     </jar>
