--- a/packaging/debian/ovd-l10n/lucid/control
+++ b/packaging/debian/ovd-l10n/lucid/control
@@ -2,7 +2,7 @@ Source: ovd-l10n
 Section: utils
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: debhelper (>= 6), cdbs, gettext
+Build-Depends: debhelper (>= 6), cdbs, make, gettext
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-l10n
