Improvement: dynamic translation
git-svn-id: file:///home/code/svn/ovd/trunk@5156 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -10,7 +10,8 @@ scripts_DATA = apps.php \
                servers.php \
                session_status.php \
                start_app.php \
-               synchronize.php
+               synchronize.php \
+               translate.php
 
 scriptsdir = $(datadir)/ulteo/webclient
 
