Cleaning: reorganize Subsystem sources
git-svn-id: file:///home/code/svn/ovd/trunk@5169 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-subsystem/hardy/rules
+++ b/packaging/debian/ovd-subsystem/hardy/rules
@@ -4,6 +4,9 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 
 DEB_DH_INSTALLINIT_ARGS := -- "defaults 98 02"
 
+pre-build::
+	cp $(CURDIR)/ulteo-ovd-subsystem.init.deb $(CURDIR)/debian/ulteo-ovd-subsystem.init
+
 install/ulteo-ovd-subsystem::
 	CONFDIR=$(CURDIR)/debian/$(cdbs_curpkg)/etc/ulteo/ ; \
 	mkdir -p $$CONFDIR ; \
