--- a/packaging/debian/ovd-subsystem/lenny/rules
+++ b/packaging/debian/ovd-subsystem/lenny/rules
@@ -4,6 +4,9 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 
 DEB_DH_INSTALLINIT_ARGS := -- "defaults 98 02"
 
+pre-build::
+	cp $(CURDIR)/ulteo-ovd-subsystem.init.deb $(CURDIR)/debian/ulteo-ovd-subsystem.init
+
 install/ulteo-ovd-subsystem::
 	CONFDIR=$(CURDIR)/debian/$(cdbs_curpkg)/etc/ulteo/ ; \
 	mkdir -p $$CONFDIR ; \
