--- a/packaging/debian/ovd-native-client/squeeze/control
+++ b/packaging/debian/ovd-native-client/squeeze/control
@@ -2,8 +2,7 @@ Source: ovd-native-client
 Section: utils
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: debhelper (>= 6), cdbs, default-jdk, ant, ant-optional,
- libx11-dev
+Build-Depends: debhelper (>= 6), cdbs, default-jdk, ant, ant-optional, gettext
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-native-client
