Packaging: remove useless dependencies
git-svn-id: file:///home/code/svn/ovd/trunk@5178 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-java-clients/lucid/control
+++ b/packaging/debian/ovd-java-clients/lucid/control
@@ -3,8 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
 Build-Depends: debhelper (>= 6), cdbs, ulteo-ovd-cert,
- default-jdk, ant, ant-optional, gcc-multilib, mingw32,
- libx11-dev, ia32-libs [amd64]
+ default-jdk, ant, ant-optional, mingw32, libx11-dev
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-applets
