Packaging: now don't call the ant target to build the library for libovd-xclient-area
git-svn-id: file:///home/code/svn/ovd/trunk@5181 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/libXClientArea/Makefile
+++ b/client/java/libXClientArea/Makefile
@@ -57,7 +57,7 @@ clean:
 
 install: all
 	mkdir -p $(LIBDIR)
-	install $(EXEC) $(LIBDIR)
+	install $(ARCH)/$(EXEC) $(LIBDIR)
 
 uninstall:
 	$(RM) $(LIBDIR)/$(EXEC)
