--- a/packaging/debian/ovd-native-client/lenny/control
+++ b/packaging/debian/ovd-native-client/lenny/control
@@ -2,7 +2,7 @@ Source: ovd-native-client
 Section: utils
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: debhelper (>= 6), cdbs, sun-java6-jdk, ant, ant-optiona, gettext
+Build-Depends: debhelper (>= 6), cdbs, sun-java6-jdk, ant, ant-optional, gettext
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-native-client
