Packaging: native client is now compatible with openjdk AND sun jvm on all debian OS
git-svn-id: file:///home/code/svn/ovd/trunk@5191 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-native-client/hardy/control
+++ b/packaging/debian/ovd-native-client/hardy/control
@@ -7,7 +7,7 @@ Standards-Version: 3.8.2
 
 Package: ulteo-ovd-native-client
 Architecture: all
-Depends: sun-java6-jre, libgetopt-java, liblog4j1.2-java,
+Depends: sun-java6-jre | openjdk-6-jre, libgetopt-java, liblog4j1.2-java,
  libovd-xclient-area
 Recommends: ulteo-ovd-integrated-launcher
 Description: Ulteo Open Virtual Desktop - native client
