--- a/packaging/debian/ovd-native-client/lenny/rules
+++ b/packaging/debian/ovd-native-client/lenny/rules
@@ -5,7 +5,7 @@ DEB_DH_INSTALL_SOURCEDIR = debian/ulteo-ovd-native-client
 include /usr/share/cdbs/1/class/ant.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 
-JAVA_HOME = /usr/lib/jvm/java-6-sun
+JAVA_HOME = $(shell readlink /etc/alternatives/java | sed -r 's/^(.*)jre.*/\1/')
 DEB_ANT_BUILD_TARGET = ovdNativeClient
 DEB_ANT_INSTALL_TARGET = ovdNativeClient.debian
 DEB_ANT_ARGS += -Dprefix=/usr -Dbuild.type=stripped -Ddestdir=$(DEB_DESTDIR)
