Doc: update ISO install V3
git-svn-id: file:///home/code/svn/ovd/trunk@5207 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -10,6 +10,7 @@ SRC=AccountsIntegration.xml \
 	Installation_ApS_Lucid.xml \
 	Installation_ApS_Windows.xml \
 	Installation_Gateway_Lucid.xml \
+	Installation_Iso.xml \
 	NativeClient.xml \
 	Protocol.xml \
 	StartASession.xml \
