Bugfix: generate.lang target wasn't works on Windows because of the file separator difference between Linux and Windows
git-svn-id: file:///home/code/svn/ovd/trunk@5254 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -183,15 +183,14 @@
   </target>
 
   <target name="generate.lang">
-    <propertyregex property="po.lang" input="${po.file}"
-                   regexp="po/(.*).po$" select="\1" />
+    <basename property="po.lang" file="${po.file}" suffix=".po"/>
     <echo>Generate "${po.lang}" language</echo>
     <exec executable="msgfmt" dir=".">
       <arg value="--java2" />
       <arg value="-d"/> <arg value="build"/>
       <arg value="-r"/> <arg value="Messages"/>
       <arg value="-l"/> <arg value="${po.lang}"/>
-      <arg value="po/${po.lang}.po"/>
+      <arg value="${po.file}"/>
     </exec>
   </target>
 
