--- a/packaging/debian/ovd-web-client/lenny/control
+++ b/packaging/debian/ovd-web-client/lenny/control
@@ -7,7 +7,8 @@ Standards-Version: 3.7.2
 
 Package: ulteo-ovd-web-client
 Architecture: all
-Depends: ulteo-ovd-applets, ulteo-ovd-l10n, php5, php5-curl, php5-gd, debconf
+Depends: debconf, ulteo-ovd-applets, ulteo-ovd-l10n,
+ php5, php5-curl, php5-gd, php-pear
 Recommends: ulteo-ovd-web-client-ajaxplorer
 Description: Ulteo Open Virtual Desktop - web client
  This is a web based client for Ulteo OVD.
