Packaging: update all infos about init daemons in OVD
git-svn-id: file:///home/code/svn/ovd/trunk@5266 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-ha/lucid/rules
+++ b/packaging/debian/ovd-ha/lucid/rules
@@ -6,6 +6,7 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 DEB_CONFIGURE_EXTRA_FLAGS = --without-libchart --with-ha
 DEB_DH_INSTALL_SOURCEDIR = debian/tmp
 DEB_DH_INSTALLINIT_ARGS = --name=ulteo_ha
+DEB_UPDATE_RCD_PARAMS = "defaults 99 01"
 
 install/ulteo-ovd-ha::
 	cd ha/shell && make install DESTDIR=$(DEB_DESTDIR)
