--- a/packaging/debian/ovd-slaveserver/lenny/rules
+++ b/packaging/debian/ovd-slaveserver/lenny/rules
@@ -4,6 +4,7 @@ DEB_PYTHON_SYSTEM := pycentral
 DEB_PYTHON_COMPILE_VERSION = 2.5
 
 DEB_DH_INSTALL_SOURCEDIR = debian/tmp
+DEB_UPDATE_RCD_PARAMS_ulteo-ovd-slaveserver := "defaults 95 05"
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
