Packaging: easy install ask the DB root password if the install is not unattend
git-svn-id: file:///home/code/svn/ovd/trunk@5273 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
@@ -2,7 +2,12 @@
 
 . /usr/share/debconf/confmodule
 
-db_input high ulteo-ovd-easy-install/display_sm_password || true
-db_go
+if db_get ulteo-ovd-debconf-database/mysql_root_password; then
+    db_input high ulteo-ovd-easy-install/display_sm_password || true
+    db_go
+else
+    db_input ulteo-ovd-easy-install/mysql_dbrootpass || true
+    db_go
+fi
 
 exit 0
