--- a/packaging/debian/ovd-easy-install/lenny/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/lenny/ulteo-ovd-easy-install.config
@@ -2,7 +2,12 @@
 
 . /usr/share/debconf/confmodule
 
-db_input high ulteo-ovd-easy-install/display_sm_password || true
-db_go
+if db_get ulteo-ovd-debconf-database/mysql_root_password; then
+    db_input high ulteo-ovd-easy-install/display_sm_password || true
+    db_go
+else
+    db_input ulteo-ovd-easy-install/mysql_dbrootpass || true
+    db_go
+fi
 
 exit 0
