--- a/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
@@ -6,7 +6,7 @@ if db_get ulteo-ovd-debconf-database/mysql_root_password; then
     db_input high ulteo-ovd-easy-install/display_sm_password || true
     db_go
 else
-    db_input ulteo-ovd-easy-install/mysql_dbrootpass || true
+    db_input critical ulteo-ovd-easy-install/mysql_dbrootpass || true
     db_go
 fi
 
