--- a/packaging/debian/ovd-easy-install/squeeze/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/squeeze/ulteo-ovd-easy-install.config
@@ -2,12 +2,20 @@
 
 . /usr/share/debconf/confmodule
 
+# if ulteo-ovd-debconf database is used
 if db_get ulteo-ovd-debconf-database/mysql_root_password; then
     db_input high ulteo-ovd-easy-install/display_sm_password || true
     db_go
+
 else
-    db_input critical ulteo-ovd-easy-install/mysql_dbrootpass || true
-    db_go
+    dbpasswd=
+    db_get mysql-server/root_password && dbpasswd=$RET
+    if [ -n "$dbpasswd" ]; then
+        db_set ulteo-ovd-easy-install/mysql_dbrootpass $dbpasswd
+    else
+        db_input critical ulteo-ovd-easy-install/mysql_dbrootpass || true
+        db_go
+    fi
 fi
 
 exit 0
