Packaging: do not show the mysql root password window twice
git-svn-id: file:///home/code/svn/ovd/trunk@5279 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/hardy/ulteo-ovd-easy-install.config
@@ -12,6 +12,7 @@ else
     db_get mysql-server/root_password && dbpasswd=$RET
     if [ -n "$dbpasswd" ]; then
         db_set ulteo-ovd-easy-install/mysql_dbrootpass $dbpasswd
+        db_fset ulteo-ovd-easy-install/mysql_dbrootpass seen true || true
     else
         db_input critical ulteo-ovd-easy-install/mysql_dbrootpass || true
         db_go
