--- a/packaging/debian/ovd-easy-install/squeeze/ulteo-ovd-easy-install.config
+++ b/packaging/debian/ovd-easy-install/squeeze/ulteo-ovd-easy-install.config
@@ -12,6 +12,7 @@ else
     db_get mysql-server/root_password && dbpasswd=$RET
     if [ -n "$dbpasswd" ]; then
         db_set ulteo-ovd-easy-install/mysql_dbrootpass $dbpasswd
+        db_fset ulteo-ovd-easy-install/mysql_dbrootpass seen true || true
     else
         db_input critical ulteo-ovd-easy-install/mysql_dbrootpass || true
         db_go
