Add ajaxplorer depends in easy-install package
git-svn-id: file:///home/code/svn/ovd/trunk@5285 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-easy-install/hardy/control
+++ b/packaging/debian/ovd-easy-install/hardy/control
@@ -16,6 +16,7 @@ Architecture: all
 Suggests: ulteo-ovd-debconf-database
 Pre-Depends: debconf
 Depends: mysql-server, wwwconfig-common,
- ulteo-ovd-session-manager, ulteo-ovd-web-client, ulteo-ovd-subsystem
+ ulteo-ovd-session-manager, ulteo-ovd-subsystem,
+ ulteo-ovd-web-client, ulteo-ovd-web-client-ajaxplorer
 Description: Ulteo Open Virtual Desktop - easy install
  Install quickly and easily the Ulteo OVD with a chroot system.
