--- a/packaging/debian/ovd-slaveserver/lucid/rules
+++ b/packaging/debian/ovd-slaveserver/lucid/rules
@@ -4,7 +4,6 @@ DEB_PYTHON_SYSTEM := pycentral
 DEB_PYTHON_COMPILE_VERSION = 2.6
 
 DEB_DH_INSTALL_SOURCEDIR = debian/tmp
-DEB_UPDATE_RCD_PARAMS_ulteo-ovd-slaveserver := "defaults 95 05"
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
@@ -12,4 +11,4 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 # fix an issue: dh_installinit creates scripts after dh_pycentral
 binary-post-install/ulteo-ovd-slaveserver::
 	cp examples/ovdSlaveServer debian/ulteo-ovd-slaveserver.ovdSlaveServer.init
-	dh_installinit -pulteo-ovd-slaveserver --name=ovdSlaveServer
+	dh_installinit -pulteo-ovd-slaveserver --name=ovdSlaveServer --update-rcd-params="defaults 95 05"
