Autotools: Adding admin/checkup.php
git-svn-id: file:///home/code/svn/ovd/trunk@5336 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -8,6 +8,7 @@ scripts_DATA = actions.php \
                applications.php \
                applications_static.php \
                appsgroup.php \
+               checkup.php \
                configuration.php \
                configuration-partial.php \
                configuration-profile.php \
