Improvement: beginning of the new StartSession
git-svn-id: file:///home/code/svn/ovd/trunk@5338 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -22,6 +22,7 @@ scripts_DATA = Application.class.php \
                ServerReportItem.class.php \
                Session.class.php \
                SessionReportItem.class.php \
+               StartSession.class.php \
                Token.class.php \
                User.class.php \
                UsersGroup.class.php \
