--- a/SessionManager/web/includes/functions.inc.d/Makefile.am
+++ b/SessionManager/web/includes/functions.inc.d/Makefile.am
@@ -1,3 +1,3 @@
-scripts_DATA = curl.inc.php login.inc.php mail.inc.php misc.inc.php template.inc.php
+scripts_DATA = curl.inc.php mail.inc.php misc.inc.php template.inc.php
 scriptsdir = $(datadir)/ulteo/sessionmanager/includes/functions.inc.d
 EXTRA_DIST = $(scripts_DATA)
