Add debug tool menu entry
git-svn-id: file:///home/code/svn/ovd/trunk@5339 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/config/config.inc.php.in
+++ b/SessionManager/config/config.inc.php.in
@@ -11,3 +11,7 @@ define('SESSIONMANAGER_CONFFILE_SERIALIZED', SESSIONMANAGER_SPOOL.'/config');
  */
 define('SESSIONMANAGER_ADMIN_LOGIN', 'admin');
 define('SESSIONMANAGER_ADMIN_PASSWORD', '21232f297a57a5a743894a0e4a801fc3');
+
+
+/* Admin debug mode */
+//define('SESSIONMANAGER_ADMIN_DEBUG', true);
