Improvement: in publication page, already used publications disable useless options in selects field
git-svn-id: file:///home/code/svn/ovd/trunk@5354 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/script/Makefile.am
+++ b/SessionManager/web/admin/media/script/Makefile.am
@@ -2,6 +2,7 @@ SUBDIRS =  ajax lib
 
 scripts_DATA = common.js \
                common-regular.js \
+               publication.js \
                sortable.js
 scriptsdir = $(datadir)/ulteo/sessionmanager/admin/media/script
 EXTRA_DIST = $(scripts_DATA)
