Bugfix: add a forgotten classpath to windowsPathsJNI
git-svn-id: file:///home/code/svn/ovd/trunk@5379 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/windowsPathsJNI/Makefile
+++ b/client/java/windowsPathsJNI/Makefile
@@ -30,7 +30,7 @@ $(EXEC): org_ulteo_ovd_integrated_WindowsPaths.o org_ulteo_ovd_integrated_Window
 	$(CC) $(LDFLAGS) -shared -o $@ $^
 
 org_ulteo_ovd_integrated_WindowsPaths.h:
-	javac -classpath ../src -d . ../src/org/ulteo/ovd/integrated/WindowsPaths.java
+	javac -classpath ../src:../required_libraries/registry.jar -d . ../src/org/ulteo/ovd/integrated/WindowsPaths.java
 	javah org.ulteo.ovd.integrated.WindowsPaths
 
 %.o: %.c %.h
