--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -255,6 +255,7 @@
       <classpath>
         <path refid="minimal.path" />
         <pathelement location="required_libraries/plugin.jar" />
+        <pathelement location="required_libraries/registry.jar" />
       </classpath>
     </javac>
     <exec executable="make" failonerror="true" dir="windowsPathsJNI">
