Bugfix: add a forgotten classpath to windowsPathsJNI (commit on windows packaging side) (linux: rev5379)
git-svn-id: file:///home/code/svn/ovd/trunk@5386 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/ovd-java-jni/package.conf
+++ b/packaging/windows/ovd-java-jni/package.conf
@@ -2,7 +2,7 @@
 svn_root: client\java\windowsPathsJNI
 
 pre_sources_commads:
-  - javac -sourcepath @SVN_ROOT@/client/java/src @SVN_ROOT@/client/java/src/org/ulteo/ovd/integrated/WindowsPaths.java
+  - javac -sourcepath @SVN_ROOT@/client/java/src -classpath @SVN_ROOT@/client/java/required_libraries/registry.jar @SVN_ROOT@/client/java/src/org/ulteo/ovd/integrated/WindowsPaths.java
   - javah -classpath @SVN_ROOT@/client/java/src -d . org.ulteo.ovd.integrated.WindowsPaths
 
 compile_commands:
