Improvement: hide recycle bin, dot file and desktop file from being displayed on Windows session
git-svn-id: file:///home/code/svn/ovd/trunk@5392 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/samba.conf
+++ b/OvdServer/examples/samba.conf
@@ -20,6 +20,10 @@
 	usershare max shares = 1024
 	usershare owner only = False
 
+        veto files = /$RECYCLE.BIN/
+        hide dot files = Yes
+        hide files = /desktop.ini/*.desktop/
+
 	inherit permissions = No
 	create mask = 0600
 	directory mask = 0700
