--- a/packaging/debian/ovd-subsystem/lucid/control
+++ b/packaging/debian/ovd-subsystem/lucid/control
@@ -9,6 +9,6 @@ Package: ulteo-ovd-subsystem
 Architecture: all
 Pre-Depends: ${misc:Depends}, po-debconf
 Depends: curl
-Conflicts: ulteo-ovd-application-server (<< 3), ulteo-ovd-slaveserver
+Conflicts: ulteo-ovd-application-server (<< 3), ulteo-ovd-slaveserver, samba, xrdp
 Description: Ulteo Open Virtual Desktop - Subsystem
  This package provides the subsystem for the Ulteo Open Virtual Desktop.
