--- a/packaging/debian/ovd-subsystem/squeeze/rules
+++ b/packaging/debian/ovd-subsystem/squeeze/rules
@@ -3,7 +3,7 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 
 pre-build::
-	cp $(CURDIR)/ulteo-ovd-subsystem.init.deb $(CURDIR)/debian/ulteo-ovd-subsystem.init
+	cp $(CURDIR)/init/debian/ulteo-ovd-subsystem $(CURDIR)/debian/ulteo-ovd-subsystem.init
 
 install/ulteo-ovd-subsystem::
 	CONFDIR=$(CURDIR)/debian/$(cdbs_curpkg)/etc/ulteo/ ; \
