Improvement: adding SessionManagement module
git-svn-id: file:///home/code/svn/ovd/trunk@5448 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -119,6 +119,7 @@ web/client/Makefile
 web/crons/Makefile
 web/webservices/Makefile
 web/modules/Makefile
+web/modules/SessionManagement/Makefile
 web/modules/AuthMethod/Makefile
 web/modules/UserGroupDB/Makefile
 web/modules/UserDB/Makefile
