Bugfix from bug in r5485: forgot to add new file in autotools system
git-svn-id: file:///home/code/svn/ovd/trunk@5492 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/tasks/Makefile.am
+++ b/SessionManager/web/classes/tasks/Makefile.am
@@ -1,4 +1,5 @@
 scripts_DATA = Task.class.php \
+               Task_available_applications.class.php \
                Task_install.class.php \
                Task_install_from_line.class.php \
                Task_remove.class.php \
