Add /client/get_cookie so the WebClient can get a PHP SESSID without requesting /client/start (gateway issue)
git-svn-id: file:///home/code/svn/ovd/trunk@5502 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/client/Makefile.am
+++ b/SessionManager/web/client/Makefile.am
@@ -1,4 +1,5 @@
-scripts_DATA = icon.php \
+scripts_DATA = get_cookie.php \
+               icon.php \
                logout.php \
                news.php \
                remote_apps.php \
