Profile and SharedFolder are now handle as module
git-svn-id: file:///home/code/svn/ovd/trunk@5512 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -19,6 +19,7 @@ scripts_DATA = actions.php \
                logs.php \
                news.php \
                password.php \
+               profiles.php \
                publications.php \
                reporting.php \
                servers.php \
