--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -125,6 +125,8 @@ web/modules/UserGroupDB/Makefile
 web/modules/UserDB/Makefile
 web/modules/ApplicationDB/Makefile
 web/modules/ApplicationsGroupDB/Makefile
+web/modules/ProfileDB/Makefile
+web/modules/SharedFolderDB/Makefile
 web/admin/Makefile
 web/admin/ajax/Makefile
 web/admin/classes/Makefile
