Improvement: gateway support
git-svn-id: file:///home/code/svn/ovd/trunk@5521 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -1,7 +1,6 @@
 SUBDIRS = applet includes media PEAR
 
-scripts_DATA = apps.php \
-               icon.php \
+scripts_DATA = icon.php \
                index.php \
                login.php \
                logout.php \
