Feature: add the Novell module which starts the Novell Client for Windows at the begining of the Windows session
git-svn-id: file:///home/code/svn/ovd/trunk@5550 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/modules/SessionManagement/Makefile.am
+++ b/SessionManager/web/modules/SessionManagement/Makefile.am
@@ -1,4 +1,5 @@
-scripts_DATA = internal.php
+scripts_DATA = internal.php \
+               novell.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/SessionManagement
 
