--- a/SessionManager/web/modules/SessionManagement/Makefile.am
+++ b/SessionManager/web/modules/SessionManagement/Makefile.am
@@ -1,4 +1,5 @@
 scripts_DATA = internal.php \
+               ldap.php \
                novell.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/SessionManagement
