Improvement: SessionManagement_microsoft module
git-svn-id: file:///home/code/svn/ovd/trunk@5567 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/modules/SessionManagement/Makefile.am
+++ b/SessionManager/web/modules/SessionManagement/Makefile.am
@@ -1,5 +1,6 @@
 scripts_DATA = internal.php \
                ldap.php \
+               microsoft.php \
                novell.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/SessionManagement
