--- a/SessionManager/web/admin/classes/Makefile.am
+++ b/SessionManager/web/admin/classes/Makefile.am
@@ -2,6 +2,7 @@ scripts_DATA = Configuration_mode_ad.class.php \
                Configuration_mode.class.php \
                Configuration_mode_internal.class.php \
                Configuration_mode_ldap.class.php \
+               Configuration_mode_novell.class.php \
                Preferences_admin.class.php \
                UsersList.class.php \
                UsersGroupsList.class.php
