--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -1,4 +1,29 @@
 <?xml version="1.0"?>
+<!--
+ Copyright (C) 2008-2010 Ulteo SAS
+ http://www.ulteo.com
+ Author Gauvain POCENTEK <gpocentek@linutop.com> 2008-2009
+ Author Julien LANGLOIS <julien@ulteo.com> 2009-2010
+ Author Jeremy DESVAGES <jeremy@ulteo.com> 2009-2010
+ Author Samuel BOVEE <samuel@ulteo.com> 2010
+ Author Thomas MOUTON <thomas@ulteo.com> 2010
+ Author David LECHEVALIER <david@ulteo.com> 2010
+ Author Guillaume DUPAS <guillaume@ulteo.com> 2010
+
+ This program is free software; you can redistribute it and/or
+ modify it under the terms of the GNU General Public License
+ as published by the Free Software Foundation; version 2
+ of the License.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+-->
 
 <project name="ulteo" default="applet">
   <taskdef resource="net/sf/antcontrib/antcontrib.properties">
