Packaging: bugfix: change wrong db_input priority
git-svn-id: file:///home/code/svn/ovd/trunk@5638 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-subsystem/hardy/ulteo-ovd-subsystem.config
+++ b/packaging/debian/ovd-subsystem/hardy/ulteo-ovd-subsystem.config
@@ -14,7 +14,7 @@ if [ -z "$URI" ]; then
     db_set ulteo-ovd-subsystem/tarball_uri $URI
 fi
 
-db_input normal ulteo-ovd-subsystem/tarball_uri || true
+db_input medium ulteo-ovd-subsystem/tarball_uri || true
 db_go
 
 exit 0
