--- a/packaging/debian/ovd-subsystem/lucid/ulteo-ovd-subsystem.config
+++ b/packaging/debian/ovd-subsystem/lucid/ulteo-ovd-subsystem.config
@@ -14,7 +14,7 @@ if [ -z "$URI" ]; then
     db_set ulteo-ovd-subsystem/tarball_uri $URI
 fi
 
-db_input normal ulteo-ovd-subsystem/tarball_uri || true
+db_input medium ulteo-ovd-subsystem/tarball_uri || true
 db_go
 
 exit 0
