Feature: new Mime-Types management
git-svn-id: file:///home/code/svn/ovd/trunk@5660 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -17,6 +17,7 @@ scripts_DATA = actions.php \
                login.php \
                logout.php \
                logs.php \
+               mimetypes.php \
                news.php \
                password.php \
                profiles.php \
