Improvement: The Applications applet uses an extended instance of OvdClientRemoteApps
git-svn-id: file:///home/code/svn/ovd/trunk@5671 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -286,6 +286,8 @@
         <pathelement location="required_libraries/jai_codec.jar"/>
         <pathelement location="required_libraries/jai_core.jar"/>
         <pathelement location="required_libraries/js.jar"/>
+	<pathelement location="required_libraries/jshortcut.jar"/>
+	<pathelement location="required_libraries/image4j.jar"/>
       </classpath>
     </javac>
     <exec executable="make" failonerror="true" dir="windowsPathsJNI">
