--- a/SessionManager/config/Makefile.am
+++ b/SessionManager/config/Makefile.am
@@ -1,3 +1,24 @@
+# Copyright (C) 2008-2010 Ulteo SAS
+# http://www.ulteo.com
+# Author Gauvain POCENTEK <gauvain@linutop.com> 2008-2009
+# Author Samuel BOVEE <samuel@ulteo.com> 2010
+# Author Julien LANGLOIS <julien@ulteo.com> 2010
+# Author Jeremy DESVAGES <jeremy@ulteo.com> 2010
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; version 2
+# of the License
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
 EXTRA_DIST = apache2.conf.in \
 			 apache2-admin.conf.in \
 			 apache2-vhost-server.conf.in \
