--- a/SessionManager/scripts/sm-config.in
+++ b/SessionManager/scripts/sm-config.in
@@ -1,6 +1,8 @@
 #!/bin/sh
-# Copyright (C) 2008 Ulteo SAS
-# Author: Gauvain Pocentek <gauvain@ulteo.com>
+
+# Copyright (C) 2008-2010 Ulteo SAS
+# Author: Gauvain Pocentek <gauvain@ulteo.com> 2008-2009
+# Author: Samuel BOVEE <samuel@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
