--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -1,6 +1,6 @@
 # Copyright (C) 2010 Ulteo SAS
 # http://www.ulteo.com
-# Author Samuel BOVEE    <samuel@ulteo.com>
+# Author Samuel BOVEE <samuel@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
