--- a/i18n/uovdclient/Makefile
+++ b/i18n/uovdclient/Makefile
@@ -1,7 +1,7 @@
 # Copyright (C) 2010 Ulteo SAS
 # http://www.ulteo.com
-# Author Julien LANGLOIS <julien@ulteo.com>
-#        Samuel BOVEE    <samuel@ulteo.com>
+# Author Julien LANGLOIS <julien@ulteo.com> 2010
+# Author Samuel BOVEE <samuel@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
