Packaging: add a missing dependency for gateway
git-svn-id: file:///home/code/svn/ovd/trunk@5692 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-slaveserver-gateway/hardy/control
+++ b/packaging/debian/ovd-slaveserver-gateway/hardy/control
@@ -9,6 +9,6 @@ XS-Python-Version: >= 2.5
 
 Package: ulteo-ovd-slaveserver-role-gateway
 Architecture: all
-Depends: ${python:Depends}, ulteo-ovd-slaveserver
+Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl
 Description: Ulteo Open Virtual Desktop - gateway role for slave server
  Gateway role for the Ulteo OVD slave server
