Add the ulteo icon to the RDPClient jar file
git-svn-id: file:///home/code/svn/ovd/trunk@5708 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -96,6 +96,7 @@
   </target>
 
   <target name="rdpClient.jar" depends="rdpClient">
+    <copy file="icons/ulteo.png" todir="build/pics" />
     <jar destfile="jars/RDPClient.jar" basedir="build">
       <manifest>
         <attribute name="Main-Class" value="org.ulteo.rdp.RdpClient"/>
