Packaging: change name ulteo-plymouth-theme-vdi to ulteo-plymouth-theme
git-svn-id: file:///home/code/svn/ovd/trunk@5723 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-desktop-settings/lucid/control
+++ b/packaging/debian/ovd-desktop-settings/lucid/control
@@ -19,7 +19,7 @@ Description: Ulteo Open Virtual Desktop - Startup scripts and default settings
  * script that can be used to start an X session on an Open Virtual
  Desktop application server.
 
-Package: ulteo-plymouth-theme-vdi
+Package: ulteo-plymouth-theme
 Architecture: all
 Depends: ${misc:Depends}, plymouth, plymouth-label
 Provides: plymouth-theme
