Packaging: split ovd-ubiquity by creating a new package: ulteo-gnome-theme
git-svn-id: file:///home/code/svn/ovd/trunk@5725 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-ubiquity/lucid/control
+++ b/packaging/debian/ovd-ubiquity/lucid/control
@@ -7,6 +7,6 @@ Standards-Version: 3.8.2
 
 Package: ubiquity-ovd
 Architecture: all
-Depends: ubiquity-frontend-gtk, gconf2, xsltproc
+Depends: ubiquity-frontend-gtk, ulteo-gnome-theme, xsltproc
 Description: OVD module for Ubiquity
  Module in Ubiquity used to install OVD with a Live CD
