--- a/packaging/debian/ovd-desktop-settings/hardy/control
+++ b/packaging/debian/ovd-desktop-settings/hardy/control
@@ -2,7 +2,7 @@ Source: ovd-desktop-settings
 Section: x11
 Priority: extra
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: cdbs, cdbs-xfce, debhelper (>= 6), intltool,
+Build-Depends: cdbs, debhelper (>= 6), intltool,
  libthunar-vfs-1-dev, libxfce4util-dev (>= 4.4), libxfcegui4-dev (>= 4.4),
  xfce4-panel-dev (>= 4.4), xfce4-dev-tools, libgconf2-dev, libgtk2.0-dev
 Standards-Version: 3.7.3
