Start a external mode from the web client in order to have a generic method to integrate OVD on any Web portal/CMS
git-svn-id: file:///home/code/svn/ovd/trunk@5747 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/client/Makefile.am
+++ b/SessionManager/web/client/Makefile.am
@@ -1,4 +1,5 @@
-scripts_DATA = get_cookie.php \
+scripts_DATA = applications.php \
+               get_cookie.php \
                icon.php \
                logout.php \
                news.php \
