Improvement: adding "daemon_external" for external Session mode
git-svn-id: file:///home/code/svn/ovd/trunk@5776 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -5,6 +5,7 @@ scripts_DATA = application.js \
                daemon.js \
                daemon_applications.js \
                daemon_desktop.js \
+               daemon_external.js \
                external.js \
                server.js \
                timezones.js
