--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -47,6 +47,7 @@ scripts_DATA = actions.php \
                reporting.php \
                servers.php \
                sharedfolders.php \
+               session-reporting.php \
                sessions.php \
                sumup.php \
                tasks.php \
